--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -661,10 +661,24 @@ ul.navigation span:hover {
 
 .cards .ion-quote {
     font-size: 22px;
-    margin: 0.5em;
+    margin: 0.3em;
     display: inline-block;
     color: #9e9e9e;
     transform: rotate(180deg);
+}
+
+.cards .ion-ios-people {
+    font-size: 25px;
+    margin: 0.3em;
+    display: inline-block;
+    color: #9e9e9e;
+}
+
+.cards .ion-ribbon-b {
+    font-size: 25px;
+    margin: 0.4em;
+    display: inline-block;
+    color: #9e9e9e;
 }
 
 .cards p {
