--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,11 +439,15 @@ main summary {
 }
 
 .timeline-section p i span.f {
+    background: #607d8b;
+}
+
+.timeline-section p i span.t {
     background: #7369b9;
 }
 
 .timeline-section p i span.b {
-    background: #607d8b;
+    background: #9e9e9e;
 }
 
 .timeline-section .pure-g {
