--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ article h1 {
     font-size: 1em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
-    margin: 1em 0;
+    margin: .75em 0;
     padding-top: 1em;
 }
 
@@ -451,7 +451,7 @@ main summary {
 }
 
 .timeline-section .pure-g {
-    padding: 2em 0;
+    padding:  0;
 }
 
 .timeline-section .pure-u-1 {
@@ -686,7 +686,7 @@ ul.navigation span:hover {
     color: #9e9e9e;
 }
 
-.cards .ion-ribbon-b {
+.cards .ion-ribbon-b, .cards .ion-bowtie {
     font-size: 25px;
     margin: 0.4em;
     display: inline-block;
@@ -812,4 +812,8 @@ a.markup--anchor {
     #career-profile {
         page-break-inside: auto;
     }
+}
+
+.padding-left-20{
+    padding-left: 20px !important;
 }
