--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,14 @@ header {
         background-image: url('../img/web-1012468_1024.jpg');
     }
 }
-
+.aws{
+    background-image: url('../img/aws.png');
+    background-size: contain;
+    background-position: center;
+    width: 38px;
+    height: 38px;
+    display: inline-block;;
+}
 header::before {
     content: ' ';
     position: absolute;
